# treemaker-rs

./: .env.release.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSING.md  PORTING.md  PRODUCT_ROADMAP.md  README.md  RELEASE.md  ROADMAP.md  WEB_ROADMAP.md  package-lock.json  package.json
.agents/skills/create-feature/: SKILL.md
.agents/skills/create-feature/agents/: openai.yaml
.github/workflows/: ci.yml  deploy-pr-preview.yml  deploy-web.yml  release.yml
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns  osf.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs  menu.rs
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/commands/: menuActions.test.ts  menuActions.ts  startScreenController.ts
apps/web/src/components/: CamvDiagnosticsSettingsBridge.test.tsx  CamvDiagnosticsSettingsBridge.tsx  CommandDialogModal.test.tsx  CommandDialogModal.tsx  GlobalToasts.tsx  HelpModal.test.tsx  HelpModal.tsx  MenuBar.css  MenuBar.tsx  SelectByIndexModal.tsx  SettingsModal.test.tsx  SettingsModal.tsx  StartScreen.test.tsx  StartScreen.tsx
apps/web/src/constants/: release.ts
apps/web/src/engine/: oristudioCpTypes.ts  snapshotMapper.test.ts  snapshotMapper.ts  types.ts
apps/web/src/examples/: catalog.ts
apps/web/src/hooks/: useMacDownloadUrl.ts  useTauriOpenedFiles.ts
apps/web/src/keyboard/: shortcutDispatcher.test.ts  shortcutDispatcher.ts  shortcutRuntime.test.ts  shortcutRuntime.ts  shortcuts.test.ts  shortcuts.ts
apps/web/src/lib/: appKeyboard.test.ts  appKeyboard.ts  (+51 more)
crates/oracle-tests/: Cargo.toml
crates/oracle-tests/tests/: corpus.rs  cpp_oracle.rs  fixtures.rs  flat_folder_corpus.rs  flat_folder_oracle.rs  folding_sequence_phase0.rs  generated_families.rs
crates/oracle-tests/tests/support/: mod.rs
crates/oristudio-cp/: Cargo.toml  README.md
crates/oristudio-cp-wasm/: Cargo.toml
crates/oristudio-cp-wasm/src/: lib.rs
crates/oristudio-cp-wasm/tests/: node.rs
crates/oristudio-cp/resources/default-molecules/: bird_base.fold  blintz.fold  dove_base.fold  fish_base.fold  frog_base.fold
crates/oristudio-cp/src/: canonical.rs  checks.rs  fold_graph.rs  folding.rs  lib.rs
crates/oristudio-cp/src/folding/: permutation.rs
crates/oristudio-cp/src/geometry/: circle.rs  epsilon.rs  line.rs  line_color.rs  line_segment.rs  mod.rs  orita_calc.rs  point.rs  polygon.rs  rectangle.rs  straight_line.rs
crates/oristudio-cp/src/io/: cp.rs  dxf.rs  fold.rs  mod.rs  obj.rs  orh.rs  ori.rs
crates/oristudio-cp/src/model/: mod.rs
crates/oristudio-cp/src/operations/: arrangement.rs  circle.rs  color.rs  construction.rs  generators.rs  measure.rs  mod.rs  point.rs  selection.rs  text.rs  transform.rs
crates/oristudio-cp/tests/: check_diagnostics.rs  checks.rs  circle_operations.rs  color_operations.rs  construction_operations.rs  folding.rs  generator_operations.rs  geometry.rs  io.rs  measure_operations.rs  model.rs  operations.rs  oriedita_folding_oracle.rs  oriedita_geometry_oracle.rs  oriedita_io_oracle.rs  oriedita_model_oracle.rs  oriedita_operations_oracle.rs  point_operations.rs  selection_operations.rs  text_operations.rs  transform_operations.rs
crates/treemaker-cli/: Cargo.toml  README.md
crates/treemaker-cli/src/: main.rs
crates/treemaker-cli/tests/: cli.rs
crates/treemaker-core/: Cargo.toml  README.md
crates/treemaker-core/examples/: visualize.rs
crates/treemaker-core/src/: lib.rs  nlco.rs
crates/treemaker-core/testdata/: minimal_cp_v5.tmd5
crates/treemaker-core/tests/: stress.rs
crates/treemaker-flatfold/: Cargo.toml  README.md
crates/treemaker-flatfold/src/: avl.rs  constraints.rs  conversion.rs  lib.rs  math.rs
crates/treemaker-fold/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/treemaker-fold/src/: lib.rs
crates/treemaker-sequence/: Cargo.toml  README.md
crates/treemaker-sequence/examples/: bench_sequence.rs
crates/treemaker-sequence/src/: lib.rs
crates/treemaker-sequence/tests/: fixture_corpus.rs  target_state.rs
crates/treemaker-wasm/: Cargo.toml  README.md
crates/treemaker-wasm/src/: lib.rs
crates/treemaker-wasm/tests/: node.rs
implementation-plans/: camv-angle-tolerance-setting.md  cp-copy-paste-transform.md  cp-infinite-canvas.md  cp-symmetry-command-redo.md  cp-tool-selection-polish.md  crease-pattern-empty-state.md  crease-pattern-import-capabilities.md  crease-pattern-view-controls.md  deselect-selection-escape-outside.md  design-symmetry-toolbar-ux.md  design-window-polish.md  expand-camv-diagnostics-hud.md  export-options-modal.md  fix-delete-node-id-contiguity.md  flat-folder-rust-port.md  fold-artifact-resource.md  fold-artifact-topology.md  folded-base-live-update.md  folding-sequence-ml-readiness.md  folding-sequence-research-roadmap.md  generated-cp-editing-and-symmetry.md  help-about-modals.md  high-accuracy-step-simulation.md  mac-download-header.md  nux-start-state.md  oriedita-angle-bisector-line-selection.md  oriedita-cp-tool-instructions.md  oriedita-cp-tool-rail-alignment.md  oriedita-extend-line-parity.md  oriedita-keybindings-rebinding.md  oriedita-native-shortcut-sync.md  oriedita-port.md  oriedita-sidebar-help-and-edit-tools.md  oriedita-source-map.md  oristudio-branding.md  oristudio-cp-always-on-camv.md  oristudio-cp-contextual-tool-options.md  oristudio-cp-diagnostic-status-hud.md  oristudio-cp-drawing-tool-parity.md  oristudio-cp-grid-parity.md  (+29 more)
scripts/: README.md  local-macos-release.sh  release.sh
tests/corpus/: README.md
tests/fixtures/: minimal_cp_v4.tmd4  minimal_v3.tmd
tests/fixtures/folding-sequence/: README.md  manifest.json  visual-review.html
tools/: generate-help-screenshots.mjs
tools/flat-folder-oracle/: README.md  oracle.mjs
tools/oracle/: README.md  build_oracle.sh  treemaker_oracle.cpp
tools/oriedita-oracle/: README.md  build_geometry_oracle.sh
tools/oriedita-oracle/src/: OrieditaGeometryOracle.java
(+119 files in other folders)
