[workspace]
members = [
    "crates/treemaker-core",
    "crates/treemaker-cli",
    "crates/treemaker-wasm",
    "crates/oracle-tests",
    "apps/tauri/src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/zacharyfmarion/treemaker-rs"
homepage = "https://github.com/zacharyfmarion/treemaker-rs"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
proptest = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
thiserror = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
walkdir = "2.5"
