[workspace]
members = [
    "crates/treemaker-flatfold",
    "crates/treemaker-fold",
    "crates/treemaker-sequence",
    "crates/treemaker-core",
    "crates/treemaker-cli",
    "crates/treemaker-wasm",
    "crates/oracle-tests",
    "apps/tauri/src-tauri",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "GPL-2.0-or-later"
repository = "https://github.com/zacharyfmarion/ori-studio"
homepage = "https://github.com/zacharyfmarion/ori-studio"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
proptest = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
thiserror = "2.0"
treemaker-fold = { version = "0.1.1", path = "crates/treemaker-fold" }
treemaker-flatfold = { version = "0.1.1", path = "crates/treemaker-flatfold" }
treemaker-sequence = { version = "0.1.1", path = "crates/treemaker-sequence" }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
walkdir = "2.5"
