[package]
name = "oracle-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fixture and oracle tests for the TreeMaker 5.0.1 Rust port"
repository.workspace = true
publish = false

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
treemaker-core = { version = "0.1.0", path = "../treemaker-core" }
walkdir.workspace = true
