[package]
name = "oristudio-cp"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Oriedita-compatible crease-pattern editing kernel for Ori Studio"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["origami", "crease-pattern", "fold", "oriedita"]
categories = ["algorithms", "data-structures", "mathematics"]
include = ["Cargo.toml", "README.md", "resources/**", "src/**", "tests/**"]

[dependencies]
encoding_rs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
treemaker-fold.workspace = true

[dev-dependencies]
serde_json.workspace = true
