[package]
name = "treemaker-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless CLI for the TreeMaker 5.0.1 Rust port"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treemaker-cli"
readme = "README.md"
keywords = ["origami", "treemaker", "crease-pattern"]
categories = ["command-line-utilities", "algorithms"]
include = ["Cargo.toml", "LICENSE.txt", "README.md", "src/**"]

[[bin]]
name = "treemaker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
treemaker-core = { version = "0.1.0", path = "../treemaker-core" }
treemaker-flatfold.workspace = true
treemaker-fold.workspace = true
walkdir.workspace = true
