[package]
name = "treemaker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core Rust model engine for the TreeMaker 5.0.1 port"
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
