[package]
name = "treemaker-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core Rust model engine for the TreeMaker 5.0.1 port"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treemaker-core"
readme = "README.md"
keywords = ["origami", "treemaker", "crease-pattern"]
categories = ["algorithms", "mathematics", "parser-implementations"]
include = [
    "Cargo.toml",
    "LICENSE.txt",
    "README.md",
    "examples/**",
    "src/**",
    "testdata/**",
    "tests/**",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
treemaker-fold.workspace = true

[dev-dependencies]
proptest.workspace = true
