[package]
name = "treemaker-flatfold"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Flat-foldability and layer-order solver for FOLD crease patterns"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treemaker-flatfold"
readme = "README.md"
keywords = ["origami", "fold", "flat-fold", "crease-pattern"]
categories = ["algorithms", "mathematics"]
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**",
    "tests/**",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
treemaker-fold.workspace = true

[dev-dependencies]
serde_json.workspace = true
