[package]
name = "treemaker-fold"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Generic FOLD format data structures and geometry helpers for origami applications"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treemaker-fold"
readme = "README.md"
keywords = ["origami", "fold", "crease-pattern", "geometry"]
categories = ["algorithms", "data-structures", "mathematics"]
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**",
    "tests/**",
]

[dependencies]
earcutr = "0.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
