[package]
name = "treemaker-sequence"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Research planner primitives for deriving origami folding sequences from FOLD crease patterns"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treemaker-sequence"
readme = "README.md"
keywords = ["origami", "fold", "crease-pattern", "planning"]
categories = ["algorithms", "mathematics"]
include = ["Cargo.toml", "README.md", "src/**", "tests/**"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
treemaker-flatfold.workspace = true
treemaker-fold.workspace = true

[dev-dependencies]
serde_json.workspace = true
