[package]
name = "treemaker-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen package for the TreeMaker 5.0.1 Rust port"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/treemaker-wasm"
readme = "README.md"
keywords = ["origami", "treemaker", "crease-pattern"]
categories = ["wasm", "algorithms"]
include = [
    "Cargo.toml",
    "LICENSE.txt",
    "README.md",
    "src/**",
    "testdata/**",
    "tests/**",
    "!pkg/**",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
treemaker-core = { version = "0.1.1", path = "../treemaker-core" }
treemaker-flatfold = { version = "0.1.0", path = "../treemaker-flatfold" }
treemaker-fold = { version = "0.1.0", path = "../treemaker-fold" }
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
